[package]
name = "symbol-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
curve25519-dalek = { version = "4.1.1" }
data-encoding = "2.3.3"
derive_more = "0.99.17"
digest = "0.10.6"
fixed-hash = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
ripemd = "0.1.3"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "3.4.0"
sha2 = "0.10.8"
sha3 = "0.10.6"
zeroize = { version = "1.7.0", features = ["serde"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
